Código hasta el mapa
Se agregó el mapa

--- a/viajes/contacto.html
+++ b/viajes/contacto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contactanos - Viajes</title>
     <link rel="shortcut icon" href="imagenes/logo.webp" type="image/x-icon">
+    
 </head>
 <body>
     <!-- <a href="servicios.html">ir a servicios</a> -->
@@ -12,6 +13,7 @@
     <!-- <a href="">
         <img src="imagenes/caragena.jpg" width="10%">
     </a> -->
+    
     <div style="display: flex; justify-content: center; gap: 10px;">
         <a href="nosotros.html">Nosotros</a>
         <a href="index.html">Inicio</a>
@@ -24,7 +26,8 @@
         <h1 style="color: blue;">Contactanos</h1>
         <p>Contactanos para tener el gusto de atenderte</p>
         <!-- imagen -->
-        <img width="40%" src="imagenes/contactanos_1.jpg" alt="Contactanos">
+        <img width="40%" height="450" src="imagenes/contactanos_1.jpg" alt="Contactanos">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4472.098571883266!2d-75.61548271799529!3d6.261341381155589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e442be3a365ff2b%3A0x438aabbbcb9c81ab!2sWorld%20Lion%20Tours%20Agencia%20de%20Turismo!5e1!3m2!1ses-419!2sco!4v1738080762513!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </body>
 </html>
