--- a/viajes/nosotros.html
+++ b/viajes/nosotros.html
@@ -25,6 +25,8 @@
         <p>Somos un equipo de trabajo donde garantizamos un viaje </p>
         <!-- imagen -->
         <img width="40%" src="imagenes/equipodetrabajo.webp" alt="Nosotros">
+        <br>
+        <iframe  width="50%" height="300px" src="https://es.wikipedia.org/wiki/Wikipedia:Portada" frameborder="0"></iframe>
     </div>
 </body>
 </html>
