Escribe tu nombre
Escribe tu nombre

--- a/viajes/Planes/cartagena.html
+++ b/viajes/Planes/cartagena.html
@@ -17,8 +17,40 @@
     <div style="display: flex; justify-content: center; flex-direction: column; align-items: center;">
     <h1>Plan Escape - Cartagena</h1>
     <p>Escape a cartagena con tu pareja y disfruta de este maravilloso lugar</p>
-    <video  width="50%" controls poster="../imagenes/caragena.jpg" src="../imagenes/Cartagena.mp4"></video>
+    <video  width="30%" controls poster="../imagenes/caragena.jpg" src="../imagenes/Cartagena.mp4"></video>
 
     </div>
+    <table border="1" style="margin: 10px auto;">
+            <tr>
+                <th colspan="4">Tabla de precios</th>
+            </tr>
+            <tr bgColor="gray">
+                <th>Tipo de plan</th>
+                <th>Personas</th>
+                <th>Precio</th>
+                <th>Incluye</th>
+               
+            </tr>
+            <tr>
+                <td rowspan="2">Pareja</td>
+                <td>2</td>
+                <td>2.200.000</td>
+                <td>Cama queen, vista al mar, netflix y aire acondicionado</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>2.500.000</td>
+                <td>Cama queen y cama doble, vista al mar, netflix y aire condicionado</td>
+            </tr>
+            <tr>
+                <td>Familiar</td>
+                <td>4</td>
+                <td>2.800.0000</td>
+                <td>Cama queen, 2 camas dobles, vista al mar, netflix y aire acondicionado</td>
+            </tr>
+    </table>
+
+
+
 </body>
 </html>
