--- a/viajes/contacto.html
+++ b/viajes/contacto.html
@@ -29,5 +29,12 @@
         <img width="40%" height="450" src="imagenes/contactanos_1.jpg" alt="Contactanos">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4472.098571883266!2d-75.61548271799529!3d6.261341381155589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e442be3a365ff2b%3A0x438aabbbcb9c81ab!2sWorld%20Lion%20Tours%20Agencia%20de%20Turismo!5e1!3m2!1ses-419!2sco!4v1738080762513!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+    <div style="text-align: center; margin-top: 20px; margin-bottom: 20px;"></div>
+    <form>
+        <label>Escriba su nombre</label>
+        <input type="text">
+
+
+    </form>
 </body>
 </html>
