--- a/viajes/servicios.html
+++ b/viajes/servicios.html
@@ -18,6 +18,15 @@
                 <p>Dos dias, tres noches todo incluido</p>
                 <b style="color: blueviolet;">1.500.000 cop</b>
                 <a href="Planes/cartagena.html"> Comprar este plan </a>
+                <div style="width: 200px;">
+                    <ul>
+                        <li>Incluye</li>
+                        <li>Desayuno</li>
+                        <li>Tiquete ida y regreso</li>
+                        <li>Transporte al hotel</li>
+                        <li>Paseos</li>
+                    </ul>
+                </div>
                 <img src="imagenes/caragena.jpg" width="100%" height="300px">
             </div>
             <div>
@@ -25,6 +34,15 @@
                 <p>Dos dias, tres noches todo incluido</p>
                 <b style="color: blueviolet;">1.700.000 cop</b>
                 <a href="Planes/santamarta.html"> Comprar este plan </a>
+                <div style="width: 200px;">
+                    <ul>
+                        <li>Incluye</li>
+                        <li>Desayuno</li>
+                        <li>Tiquete ida y regreso</li>
+                        <li>Transporte al hotel</li>
+                        <li>Paseos</li>
+                    </ul>
+                </div>
                 <img src="imagenes/santamarta.jpg" width="100%" height="300px">
             </div>
             <div>
@@ -32,6 +50,15 @@
                 <p>Dos dias, tres noches todo incluido</p>
                 <b style="color: blueviolet;">2.000.000 cop</b>
                 <a href="Planes/sanandres.html"> Comprar este plan </a>
+                <div style="width: 200px;">
+                    <ul>
+                        <li>Incluye</li>
+                        <li>Desayuno</li>
+                        <li>Tiquete ida y regreso</li>
+                        <li>Transporte al hotel</li>
+                        <li>Paseos</li>
+                    </ul>
+                </div>
                 <img src="imagenes/sanandres.jpg" width="130%" height="300px">
             </div>
         </div>
