--- a/viajes/contacto.html
+++ b/viajes/contacto.html
@@ -29,12 +29,44 @@
         <img width="40%" height="450" src="imagenes/contactanos_1.jpg" alt="Contactanos">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4472.098571883266!2d-75.61548271799529!3d6.261341381155589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e442be3a365ff2b%3A0x438aabbbcb9c81ab!2sWorld%20Lion%20Tours%20Agencia%20de%20Turismo!5e1!3m2!1ses-419!2sco!4v1738080762513!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <div style="text-align: center; margin-top: 20px; margin-bottom: 20px;"></div>
-    <form>
-        <label>Escriba su nombre</label>
-        <input type="text">
+        <div style="text-align: center; margin-top: 20px; margin-button: 20px;">
+            <form>
+                <label>Nombre</label>
+                <input require name="nombreCliente" type="text" placeholder="Escriba en mayuscula"> <br>
+                <label>Celular o Telefono</label>
+                <input require type="tel"> <br>
+                <label>Edad</label>
+                <input require type="number" min="18" max="50"> <br>
+                <label>Correo Electronico</label>
+                <input require name="correo" type="email"> <br>
+                <label>Fecha de nacimiento</label>
+                <input type="date" min="1950-01-01" max="2006-12-31"> <br>
+                <label>Enviar una foto</label>
+                <input type="file" accept=".jpg, .png, .gif"> <br>
+                <label> Genero:</label>
+                <input type="radio" name="Genero" value="Hombre"> Hombre 
+                <input type="radio" name="Genero" id="Mujer"> Mujer 
+                <input type="radio" name="Genero" id="Prefiero no decirlo"> Prefiero no decirlo 
+                <input type="radio" name="Genero" id="Otro"> Otro <br>
+                <label>Escape tu plan</label>
+                <input type="checkbox" name="Plan" value="Pareja"> Plan Pareja
+                <input type="checkbox" name="Plan" value="Familiar"> Plan Familiar
+                <input type="checkbox" name="Plan" value="Amigos"> Plan Amigos
+                <input type="checkbox" name="Plan" value="Otro"> Plan Otro
+                <select name="contacto">
+                    <option value="WhatsApp">WhatsApp</option>
+                    <option value="Telefono">Llamada Telefonica</option>
+                    <option value="Mensajes">Mensajes de texto</option>
+                    <option value="Correo">Correo</option>
+                </select> <br>
+                <label>Mensaje:</label>
+                <textarea name="mensaje"></textarea>
+                
+                <button type="submit">enviar datos</button>
+                <button require type="reset">borrar datos</button>
 
+            </form>
+        </div>
 
-    </form>
 </body>
 </html>
